# modelagem-lab

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  render.yaml
.claude/: settings.json
.claude/agents/: algorithm-porter.md  literature-scout.md  model-builder.md  stats-advisor.md
.claude/hooks/: pre-bash-safety.js
.claude/skills/buscar-literatura/: SKILL.md
.claude/skills/port-r-python/: SKILL.md
.claude/skills/scaffold-interface/: SKILL.md
.claude/skills/selecao-variaveis/: SKILL.md
.github/workflows/: release.yml
app/: logica.py  requirements.txt  streamlit_app.py
app/backend/: feature_lab.py  ingestao.py  logica.py  main.py  requirements.txt  test_feature_lab.py  test_ingestao.py  test_logica_categorizacao.py  test_logica_esfera1.py  test_logica_esfera2.py  test_logica_preview.py
app/frontend/app/: globals.css  layout.tsx  page.tsx
docs/: INDEX.md  pipeline_lab_referencia.tex
docs/algoritmos-originais/: Pedro_Wise_3.0.1.R  pedro-wise-resumo.md
docs/experimentos/: colinearidade-stability-selection.md  pedro-wise-vs-alternativas.md  pipeline-completo-credito-real.md
docs/guias/: fluxo-de-trabalho.md
docs/literatura/: README.md  categorizacao.md  construcao-variaveis.md  shadow-variable-probing.md  stability-selection.md  transformacao.md
docs/planos/: expansao-modulos-2026-07-08.md  interface-streamlit.md  interface-v2-fastapi-react.md  modelagem-lab-config.md
docs/referencias/: apis-fontes-abertas.md  benchmark-paralelizacao.md  datasets.md  livros.md  sota-tracker-modelagem.md
notebooks/: .gitkeep  pipeline_lab_case_churn.ipynb
python/agregacao_temporal/: __init__.py  primitivas.py  safra.py
python/categorizacao/: __init__.py  binning.py
python/construcao/: __init__.py  razoes.py
python/interacao/: __init__.py  estabilidade.py  regras.py
python/modelagem_lab/: __init__.py
python/pedro_wise/: __init__.py  base.py  estimators.py  level2.py  level3.py  metrics.py  pipeline.py  selection.py  shadow_probing.py  types.py
python/pipeline_lab/: REFERENCIA.md  __init__.py  agregacao_temporal.py  categorizar.py  construcao.py  divisao.py  esfera1.py  esfera2.py  esteira.py  interacao.py  preselecao.py  treinamento.py
python/preselecao/: __init__.py  filtros.py
python/transformacao/: __init__.py  potencia.py  potencias_fixas.py  woe.py
r/: .gitkeep
scraping/: .gitkeep  __init__.py  _common.py  arxiv_client.py  crossref_client.py  europepmc_client.py  openalex_client.py  semantic_scholar_client.py
scripts/: Pedro_Wise_3.0.1_corrigido_para_validacao.R  baixar_dataset_credito_uci.py  benchmark_paralelizacao.py  experimento_colinearidade.py  experimento_pedro_wise_vs_alternativas.py  explorar_feature_lab.py  gerar_dataset_colinearidade.py  gerar_dataset_painel_atraso.py  gerar_dataset_validacao.py  pipeline_completo_credito_real.py  validar_port_python.py  validar_port_r.R
tests/: conftest.py  test_agregacao_temporal.py  test_base.py  test_categorizacao.py  test_construcao.py  test_estabilidade.py  test_esteira.py  test_estimators.py  test_interacao.py  test_level2.py  test_level3.py  test_metrics.py  test_pipeline.py  test_pipeline_lab.py  test_potencia.py  test_potencias_fixas.py  test_preselecao.py  test_safra.py  test_scraping_clients.py  test_scraping_common.py  test_selection_level1.py  test_shadow_probing.py  test_significancia.py  test_transformacao.py
(+17 files in other folders)
